# linkya

./: .dockerignore  .env.example  .flake8  .gitignore  .isort.cfg  AGENTS.md  CLAUDE.md  CODE_QUALITY.md  IMPROVEMENTS.md  LICENSE  MAKEFILE_ADDITION.txt  Makefile  README.md  TEST_COVERAGE_ANALYSIS.md  VSCODE_SETUP.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup-hooks.sh  setup-vscode-env.sh  test_film_architecture.sh  test_improvements.py
.dev/: remove_type_hints.py  remove_type_hints_v2.py  setup-vscode-env.sh
.github/: copilot-instructions.md
.github/hooks/: README.md
.github/prompts/: bootstrap-copilot.prompt.md  commit.prompt.md  generate-unittests.prompt.md  improvements.prompt.md  restart.prompt.md  review-code.prompt.md  update-doc.prompt.md
.github/workflows/: cd.yml  ci.yml
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
backend-service/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend-service/src/: __init__.py  app.py  config.py  database.py  events.py  ha_backfill.py  main.py  models.py
backend-service/src/api/: __init__.py  appliances.py  consumption.py  detections.py  events.py  nilm.py  signatures.py  system.py
backend-service/src/db/: __init__.py  appliances.py  base.py  consumption.py  detections.py  manager.py  models.py  signatures.py
backend-service/src/utils/: __init__.py  redis_client.py
backend-service/src/websockets/: __init__.py  base.py  consumption.py  detections.py  import_progress.py  routes.py  training.py
backend-service/tests/: test_ha_backfill.py
data/: load_signatures.py  nilmia_signatures_2025-10-24T14-33-42.csv  nilmia_signatures_2025-10-24T16-22-49.csv  nilmia_signatures_2025-10-28T13-39-39.csv  nilmia_signatures_2025-10-28T14-12-56.csv  nilmia_signatures_2025-10-28T15-20-42.csv  nilmia_signatures_2025-10-31T16-50-16.csv  nilmia_signatures_2025-10-31T18-47-40.csv  nilmia_signatures_2025-11-03T16-06-35.csv  nilmia_signatures_2025-11-04T09-47-58.csv  nilmia_signatures_2025-11-05T11-51-35.csv
docs/: 2210.04176v1.txt  DOC.md  IET Smart Grid - 2025 - Zhang - A Cost‐Effective NILM Solution With Three‐Point Labelling and Non‐Causal Convolution.txt  temporal-validation-branches.md  websocket-message-examples.md  websocket-training-logs.md
frontend-service/: .dockerignore  .env  Dockerfile  Dockerfile.dev  Dockerfile.nginx  Dockerfile.prod  README.md  README_CONFIG.md  build-and-copy.sh  nginx.conf  nginx.prod.conf  package-lock.json  package.json
frontend-service/public/: index.html
frontend-service/src/: App.js  theme.js  themes.js
frontend-service/src/components/: AppliancesList.js  ChartsContainer.js  CombinedChart.js  ConsumptionChart.js  CurrentModel.js  DetectionsList.js  DetectionsTimeline.js  Header.js  LatestConsumption.js  ModelCard.js  ModelInfoSection.js  NilmTraining.js  SettingsMenu.js  SignatureModal.js  SignaturesList.js  SignaturesTimeline.js  ThemeSelector.js  TrainingLogsViewer.js
frontend-service/src/context/: ApplianceColorsContext.js  ChartContext.js  DataContext.js  NotificationContext.js  ThemeContext.js
frontend-service/src/services/: api.js  sse.js  websocket.js
ha-ingest-service/: .dockerignore  Dockerfile  pyproject.toml
ha-ingest-service/src/: config.py  database.py  ha_client.py  main.py
ha-publish-service/: Dockerfile  pyproject.toml
ha-publish-service/src/: config.py  database.py  discovery.py  ha_backfill.py  ha_states_injector.py  main.py  stats_injector.py
mosquitto-service/: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  INTEGRATION.md  Makefile  README.md  deploy.sh  docker-compose.yml
mosquitto-service/config/: acl.conf  mosquitto-minimal.conf  mosquitto-test.conf  mosquitto.conf  passwd.template
mosquitto-service/scripts/: generate-certs.sh  generate-passwords.sh  init-mosquitto.sh
nginx/: Dockerfile  README.md  nginx.conf
nilm-cnn-service/: Dockerfile  README.md  pyproject.toml
nilm-cnn-service/src/: __init__.py  check_signatures.py  cnn_nilm.py  config.py  database.py  migrate_signatures.py  seq2point_nilm.py  tasks.py
nilm-service/: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint-beat.sh  pyproject.toml
nilm-service/src/: __init__.py  config.py  database.py  events.py  jobs.py  main.py  morphology.py  nilm.py  seq2point_nilm.py  tasks.py
nilm-service/src/nilm/: README.md  __init__.py  callbacks.py  layers.py  losses.py  morphology.py  preprocessing.py  utils.py
nilm-service/src/nilm/detectors/: __init__.py  change_point_detector.py  state_detector.py
nilm-service/src/nilm/models/: __init__.py  multioutput_model.py
nilm-service/tests/: conftest.py  test_jobs_coalescing.py
pgadmin-config/: .gitignore  README.md  init-pgadmin.sh  pgadmin-servers.json
scripts/: init.sh
sync-service/: .gitignore  Dockerfile  entrypoint-beat.sh  pyproject.toml
sync-service/src/: __init__.py  config.py  database.py  tasks.py
(+3 files in other folders)
