[project]
name = "linkya-backend"
version = "0.1.0"
description = "Backend API FastAPI pour Linkya"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "psycopg[binary]>=3.2.1",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "celery[redis]>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
