[project]
name = "linkya-backend"
version = "0.1.0"
description = "FastAPI backend for Linkya"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "psycopg[binary]>=3.2.1",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
