[project]
name = "linkya-ha-ingest"
version = "0.1.0"
description = "Home Assistant → TimescaleDB ingestion (MQTT + History API backfill)"
requires-python = ">=3.13"
dependencies = [
    "aiomqtt>=2.3.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2.1",
    "sqlalchemy>=2.0.35",
    
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
