[project]
name = "linkya-ha-publish"
version = "0.1.0"
description = "NILM detections → HA MQTT discovery + state"
requires-python = ">=3.13"
dependencies = [
    "aiomqtt>=2.3.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "psycopg[binary]>=3.2.1",
    "sqlalchemy>=2.0.35",
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
