[project]
name = "nilm-cnn-service"
version = "0.1.0"
description = "Service NILM basé sur CNN pour détection de signatures complexes d'appareils"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "psycopg[binary]>=3.2.1",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "tensorboard>=2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
