[project]
name = "nilmia-nilm-service"
version = "0.1.0"
description = "Service NILM pour la détection d'appareils électriques"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "psycopg[binary]>=3.2.1",
    "sqlalchemy>=2.0.35",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "pypots>=0.9.0",
    "torch>=2.5.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
]
