[project]
name = "nilm-service"
version = "0.1.0"
description = "Service NILM Sequence-to-Point pour désagrégation d'appareils concurrents"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4.0",
    "psycopg[binary]>=3.2.1",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.2",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "hmmlearn>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
