[project]
name = "nilm-service"
version = "1.0.0"
description = "NILM Seq2Point engine + FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.2",
    "tensorflow-cpu>=2.16,<2.18; platform_machine == \"x86_64\"",
    "tensorflow>=2.16,<2.18; platform_machine == \"aarch64\"",
    "numpy>=1.26,<2.1",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "hmmlearn>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
